--- a/res/layout/blog_post_list_screen.xml
+++ b/res/layout/blog_post_list_screen.xml
@@ -3,6 +3,7 @@
     xmlns:card="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/orange_card_background_widen"
     android:orientation="vertical" >
  
     <it.gmariotti.cardslib.library.view.CardListView
